--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,9 @@
 [phases.setup]
-nixPkgs = ["python39", "python39Packages.pip"]
+nixPkgs = ["python311", "python311Packages.pip", "nodejs_18", "npm"]
 
 [phases.install]
 cmds = [
-  "pip install yt-dlp",
+  "pip install -r requirements.txt",
   "npm install"
 ]
 
