--- a/nixpacks-simple.toml
+++ b/nixpacks-simple.toml
@@ -1,5 +1,6 @@
+# Alternative simple nixpacks configuration
 [phases.setup]
-nixPkgs = ["python3", "nodejs"]
+nixPkgs = ["python311", "nodejs"]
 
 [phases.install]
 cmds = [
