--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,5 @@
 [phases.setup]
-nixPkgs = ["python3", "pip", "curl", "ffmpeg"]
-
-[phases.install]
-cmds = [
-  "pip install yt-dlp",
-  "curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp",
-  "chmod a+rx /usr/local/bin/yt-dlp"
-]
+nixPkgs = ["python3", "pip", "curl", "ffmpeg", "yt-dlp"]
 
 [phases.build]
 cmds = ["npm install"]
