--- a/Dockerfile.alternative
+++ b/Dockerfile.alternative
@@ -1,13 +1,14 @@
-# Use Node.js 18 Alpine as base image
-FROM node:18-alpine
+# Alternative Dockerfile using Ubuntu base
+FROM node:18-slim
 
-# Install system dependencies including yt-dlp
-RUN apk add --no-cache \
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
     python3 \
-    py3-pip \
+    python3-pip \
     curl \
     ffmpeg \
-    yt-dlp
+    yt-dlp \
+    && rm -rf /var/lib/apt/lists/*
 
 # Verify yt-dlp installation
 RUN yt-dlp --version
